<resources>
    <string name="app_name">Messenger</string>
    <string name="welcome_to_messenger">Welcome to \nMessenger</string>
    <string name="search">Search</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="create_room">Create Room</string>
    <string name="create">create</string>
    <string name="you_ve_accept_this_request">You\'ve accept this request!</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="leave_room">Leave Room</string>
    <string name="add_members">Add members</string>
    <string name="members">Members</string>
    <string name="add_member">Add member</string>
    <string name="enter_email">Enter email</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sending_calling_request">Sending calling request!</string>
    <string name="incoming_calling_invitation">Incoming calling invitation</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="accept">Accept</string>
    <string name="change_room_name">Change room name</string>
</resources>