<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding_16"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/add_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edAddMem"
        android:layout_marginTop="@dimen/padding_16"
        android:textColor="@color/colorWhite"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/padding_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:background="@drawable/deny_btn"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="@dimen/padding_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnAddMem"
            android:text="@string/add"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/padding_8"
            android:background="@drawable/accept_btn"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>