<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/padding_16"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_marginBottom="@dimen/padding_16"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Change room name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/enter_new_name"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:id="@+id/edRoomName"
        android:background="@drawable/edit_text_search_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/padding_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:background="@drawable/deny_btn"
            android:layout_marginEnd="@dimen/padding_8"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnAccept"
            android:text="@string/accept"
            android:textColor="@color/colorWhite"
            android:background="@drawable/accept_btn"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>